Fix item alignment

--- a/app/assets/stylesheets/layouts/sites/_edit.css.sass
+++ b/app/assets/stylesheets/layouts/sites/_edit.css.sass
@@ -32,8 +32,6 @@
         font-size: 0.85em
 
   .button-wrapper
-    vertical-align: super !important
-
     a
       color: $blue
       display: block
